Fixed overlapping bug for header and sidebar, triggered by the introduction of the loading animation overlay. SOCA-9 #time 4m

--- a/app/src/sass/_header.scss
+++ b/app/src/sass/_header.scss
@@ -4,7 +4,7 @@ header {
     position:fixed;
     width:100%;
     top:0;
-    z-index:1030;
+    z-index:5002;
         #logo {
             height:60px;
             width:60px;
