--- a/app/src/sass/_sidebar.scss
+++ b/app/src/sass/_sidebar.scss
@@ -5,6 +5,7 @@
     bottom:0px;
     margin-top:60px;
     background-color:$dark-grey; //28292d
+    z-index:5002;
         ul {
             margin-top:20px;
             padding:0px;
